@@ -197,6 +197,7 @@ specflags.test \
 specflags2.test	\
 specflags3.test	\
 specflags4.test \
+specflags5.test \
 spell.test \
 spell2.test \
 spell3.test \
