@@ -1,0 +1,22 @@
+#! /bin/sh
+
+# Test of flags specific to executable.
+# From Pavel Roskin.
+
+. $srcdir/defs || exit 1
+
+cat >> configure.in << 'END'
+AC_PROG_CC
+END
+
+cat > Makefile.am << 'END'
+bin_PROGRAMS = foo
+foo_CFLAGS = -DFOO
+foo_SOURCES = foo.c
+END
+
+: > compile
+
+$AUTOMAKE || exit 1
+
+fgrep '$(foo_CFLAGS)' Makefile.in
