@@ -1,3 +1,8 @@
+1999-12-10  Tom Tromey  <tromey@cygnus.com>
+
+	* specflags5.test: New file.
+	* Makefile.am (TESTS): Added specflags5.test.
+
 1999-12-06  Tom Tromey  <tromey@cygnus.com>
 
 	* confh4.test: Corrected final test.
